# dtensor-muon

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
benchmark/: RESULTS.md  __init__.py  bench_distributed.py  bench_kernels.py  bench_optim.py  harness.py  naive_muon.py  run.py
plans/: README.md  test_dtensor_distributed.md  test_foreach.md  test_gram.md  test_newton_schulz.md  test_optim.md  test_optim_foreach.md  test_optim_lp.md  test_orthogonalize.md  test_polar_express.md  test_testing_harness.md
src/dtensor_muon/: __init__.py
src/dtensor_muon/optim/: __init__.py  optim.py  optim_foreach.py  optim_lp.py
src/dtensor_muon/optim/algorithms/: base.py  muon.py  normuon.py
src/dtensor_muon/orthogonalize/: __init__.py  newton_schulz.py  orthogonalize.py  polar_express.py
src/dtensor_muon/utils/: __init__.py  dtensor.py  foreach.py
src/muonium/: __init__.py
src/muonium/kernels/: __init__.py  gram.py
src/muonium/optim/: __init__.py  optim.py  optim_lp.py
src/muonium/optim/algorithms/: __init__.py  base.py  muon.py  normuon.py
src/muonium/orthogonalize/: newton_schulz.py  polar_express.py
test_support/: __init__.py  distributed.py
tests/: conftest.py  testkit.py
tests/kernels/: test_gram.py
tests/optim/: test_algorithms.py  test_optim.py  test_optim_foreach.py  test_optim_lp.py
tests/orthogonalize/: test_newton_schulz.py  test_orthogonalize.py  test_polar_express.py
tests/utils/: test_dtensor.py  test_foreach.py  test_testing.py
