[project]
name = "muonium"
version = "0.2.0"
description = "A performant, distributed-ready base for Muon optimizer research, built on PyTorch DTensor"
readme = "README.md"
authors = [
    { name = "Tony Francis", email = "tonyfrancisv@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "torch",
]

[project.optional-dependencies]
lp = [
    "torchao",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
    "ty>=0.0.51",
]

[tool.ruff]
line-length = 96
indent-width = 4
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
lint.ignore = ["F722", "E731", "F821", "E741"]
